# quorum

./: .gitignore  .quorum.example.json  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  quorum-review.yml
docs/: architecture.md
evals/dataset/: a1_eval_exec.diff  a2_shell_injection.diff  a3_bare_except.diff  a4_hardcoded_secret.diff  a5_debug_print.diff  a6_blocking_sleep.diff  b1_sql_injection.diff  b2_off_by_one.diff  b3_missing_null_check.diff  c1_clean_refactor.diff  c2_docs_only.diff  labels.json
examples/: sample_review.md
quorum/: __init__.py  agents.py  cli.py  config.py  diff.py  dispatcher.py  evals.py  providers.py  render.py  schema.py  synthesizer.py
tests/: test_config.py  test_diff.py  test_evals.py  test_review.py  test_synthesizer.py
tests/fixtures/: sample.diff
